# spanda

./: .gitignore  LICENSE  README.md  setup.cfg
spanda/: __init__.py
spanda/core/: __init__.py  typing.py  utils.py
spanda/sql/: column.py  functions.py  window.py
spanda/tests/: simple_tests.py
