[metadata]
name = spanda
version = 0.1.0
author = Guy Dar
author_email = guyd1995@gmail.com
description = Spark-inspired syntax for Pandas
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/guyd1995/spanda
project_urls =
    Bug Tracker = https://github.com/guyd1995/spanda/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = spanda
packages = find:
python_requires = >=3.6

[options.packages.find]
where = spanda